--- a/Master.ipynb
+++ b/Master.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "21c65940",
    "metadata": {},
    "outputs": [],
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "ff884e9c",
    "metadata": {},
    "outputs": [
@@ -423,7 +423,7 @@
        "[21597 rows x 21 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -435,8 +435,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "2f33d55e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 21597 entries, 0 to 21596\n",
+      "Data columns (total 21 columns):\n",
+      " #   Column         Non-Null Count  Dtype  \n",
+      "---  ------         --------------  -----  \n",
+      " 0   id             21597 non-null  int64  \n",
+      " 1   date           21597 non-null  object \n",
+      " 2   price          21597 non-null  float64\n",
+      " 3   bedrooms       21597 non-null  int64  \n",
+      " 4   bathrooms      21597 non-null  float64\n",
+      " 5   sqft_living    21597 non-null  int64  \n",
+      " 6   sqft_lot       21597 non-null  int64  \n",
+      " 7   floors         21597 non-null  float64\n",
+      " 8   waterfront     19221 non-null  object \n",
+      " 9   view           21534 non-null  object \n",
+      " 10  condition      21597 non-null  object \n",
+      " 11  grade          21597 non-null  object \n",
+      " 12  sqft_above     21597 non-null  int64  \n",
+      " 13  sqft_basement  21597 non-null  object \n",
+      " 14  yr_built       21597 non-null  int64  \n",
+      " 15  yr_renovated   17755 non-null  float64\n",
+      " 16  zipcode        21597 non-null  int64  \n",
+      " 17  lat            21597 non-null  float64\n",
+      " 18  long           21597 non-null  float64\n",
+      " 19  sqft_living15  21597 non-null  int64  \n",
+      " 20  sqft_lot15     21597 non-null  int64  \n",
+      "dtypes: float64(6), int64(9), object(6)\n",
+      "memory usage: 3.5+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "house_data.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "38c46920",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -458,7 +503,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
