Final model achieved. Started validation

--- a/cleaning_data.ipynb
+++ b/cleaning_data.ipynb
@@ -13,7 +13,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "from ipynb.fs.full.Master import distance_from"
    ]
   },
   {
@@ -57,6 +58,33 @@
     "    #Drop original date column\n",
     "    df.drop(columns=['date'], axis=1, inplace=True)\n",
     "    \n",
+    "#     # Change features we changed in the original dataset\n",
+    "#     df = df[~df['bedrooms'].isin([11, 10, 9])]\n",
+    "    \n",
+    "#     df['bathrooms'] = df['bathrooms'].apply(lambda x: np.ceil(x) if str(x)[2] == '7' else (np.ceil(x) if str(x)[2] == '5' else np.floor(x)))\n",
+    "#     df = df[~df['bathrooms'].isin([8.0, 7.0])]\n",
+    "    \n",
+    "#     df['floors'] = df['floors'].apply(lambda x: np.ceil(x))\n",
+    "    \n",
+    "#     lat_long = df['lat'].astype(str) + ',' + df['long'].astype(str)\n",
+    "\n",
+    "#     lat_long = list(map(eval, lat_long))\n",
+    "#     Seattle = (47.6062, -122.3321)\n",
+    "#     Redmond = (47.6740, -122.1215)\n",
+    "#     miles_s = []\n",
+    "#     miles_r = []\n",
+    "#     for i in lat_long:\n",
+    "#         miles_s.append(round(distance.distance(i, Seattle).miles, 1))\n",
+    "#     for i in lat_long:\n",
+    "#         miles_r.append(round(distance.distance(i, Redmond).miles, 1))\n",
+    "#     df['distance_seattle'] = miles_s\n",
+    "#     df['distance_redmond'] = miles_r\n",
+    "#     df['distance_seattle'] = distance_from(47.6062, -122.3321, df['lat'], df['long'])\n",
+    "#     df['distance_redmond'] = distance_from(47.6740, -122.1215, df['lat'], df['long'])\n",
+    "    \n",
+    "    # Drop columns we removed from original dataset\n",
+    "    df.drop(columns=['date', 'grade', 'sqft_above', 'sqft_living15', 'sqft_lot15', 'id', 'zipcode', 'lat', 'long', 'condition', 'yr_built', 'sqft_lot', 'yr_renovated', 'view'], axis=1, inplace=True)\n",
+    "\n",
     "    return df"
    ]
   },
